# dekor

./: Cargo.toml  LICENSE  OutputExample  README.md
src/: characters.rs  lib.rs  style.rs
